# otus_lab9

./: CMakeLists.txt
.github/workflows/: github-actions.yml
include/: command.h  parser.h  printerdispatcher.h
src/: main.cpp  parser.cpp  printer.cpp  printerdispatcher.cpp
